[package]
name = "dietcpp_lsp"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "dietcpp-lsp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
lsp-types = "0.95"
log = "0.4"
env_logger = "0.11"
url = "2.5"
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
cli = ["clap"]
